Arbete med TechStore

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <!-- Your header title and shopping cart button goes here  -->
         <div id="Header">
             <div id="HeaderText">
-                <h1 id="TitleHeader">TechStore</h1>
+                <h1 id="TitleHeader"><a href="./index.html">TechStore</a></h1>
             </div>
             <div id="Mellan"></div>
             <div id="rightHeader">
-                <button id="Cart"><i class="fas fa-shopping-cart"></i></button>
-               
+                <button id="Cart"><i class="fas fa-shopping-cart"></i><a href="./ShoppingCart.html"></a></button>
+                
             </div>
         </div>
     </header>
